# cytom

./: LICENSE  README.md
algorithms/: Makefile
examples/: bfs-async.cc  bfs.cc  bfs_batch.cc  cc-async.cc  cc.cc  cc_batch.cc  cc_bfs.cc  cc_test.cc  main.cc  pagerank-delta-merge.cc  pagerank-delta.cc  pagerank.cc  schema_generated.h  sssp.cc  sswp.cc
src/: .gitignore  CMakeLists.txt  Makefile
src/fb-test/: CMakeLists.txt  rb-test.cc  sample_binary.cc
src/flatbuffer/: CMakeLists.txt  schema.fbs
src/include/algorithm/: algorithm-common.h  algorithm-includes.h
src/include/core/: algorithm-executor.h  apply-executor.h  continuous-algorithm-executor.h  convergence-checker.h  jobs.h  meta-tile-store.h  results-writer.h  tile-distributor.h  tile-store.h  vertex-store.h
src/include/edge-inserter/: binary-edge-provider-interface.h  binary-edge-provider.h  csv-edges-provider.h  edge-inserter.h  i-edge-provider.h  rmat-context.h  rmat-edge-provider.h
src/include/main/: execute.h
src/include/perf-event/: perf-event-collector.h  perf-event-manager.h  perf-event-ringbuffer-sizes.h  perf-event-scoped.h
src/include/ring-buffer/: ring-buffer.h
src/include/tile-manager/: compaction-worker.h  edges-writer.h  meta-tile-manager.h  tile-manager.h
src/include/traversal/: column_first.h  hilbert.h  row_first.h  traversal.h
src/include/util/: arch.h  atomic_counter.h  config.h  cpu_topology.h  cpu_topology_mic.h  datatypes-algorithm.h  datatypes.h  datatypes_config.h  runnable.h  util.h
src/lib/: CMakeLists.txt
src/lib/llvm-pass/: CMakeLists.txt  MergeAlgorithm.cpp  ParallizeAlgorithm.cpp
src/lib/perf-event/: CMakeLists.txt  perf-event-collector.cc  perf-event-manager.cc  perf-event-ringbuffer-sizes.cc  perf-event-scoped.cc
src/lib/ring-buffer/: CMakeLists.txt  ring-buffer.cc
src/lib/tools/: CMakeLists.txt  diff.sh  kendall-tau-computation.py  main-rewrite-ids.cc  main_results_diff.cc  main_sort_results.cc
src/lib/traversal/: CMakeLists.txt  column_first.cc  hilbert.cc  row_first.cc  traversal.cc
src/lib/util/: CMakeLists.txt  config.cc  cpu_topology_host.h  read-context.cc  runnable.cc  util.cc
src/scripts/: aggregate_diskstats.py  algorithm.py  build.py  check_label.py  check_output.py  check_pr.py  config.py  convert_adjacency_list_to_edge_list.py  convert_graph.py  convert_label.py  count_vertices.py  cpu-topology.py  fileSizeInfo.py  iobench_aggregate_plot.py  iobench_get_util.sh  iobench_stat.sh  iostat.sh  perf_stat.sh  run.py  utils.py
src/scripts/plots/plotconfig/: algorithm-insertions.json  algorithm-performance.json  algorithm-reexecution.json  algorithm-tile-batches.json  async-performance.json  baseline.json  deletions-baseline.json  deletions.json  edge-apis.json  insertions-graphin.json  insertions-in-memory.json  insertions-rmat.json  insertions.json  pagerank-delta.json  selective-scheduling.json  sssp-delta.json  tile-distribution.json  traversals.json  write-edges.json  write-results.json
src/scripts/plots/plotdata/: .gitignore  Makefile  algorithm-compaction-retries-uk2007.gp  algorithm-compaction-retries.gp  algorithm-dynamic-compaction.gp  algorithm-rewrite-ids.gp  algorithm-traversals.gp  batch-insertion-no-rewrite-id.gp  batch-insertion-rewrite-id.gp  common.gnuplot  gnuplot_dependencies.py  rmat-algorithm-compaction-retries.gp  rmat-algorithm-dynamic-compaction.gp  rmat-algorithm-rewrite-ids.gp  rmat-algorithm-traversals.gp  rmat-batch-insertion-no-rewrite-id.gp  rmat-batch-insertion-rewrite-id.gp
src/tools/scripts/topology/: cpu_topology.py
src/util/pci-ring-buffer/include/: arch.h
src/util/pci-ring-buffer/lib/: CMakeLists.txt
